API model Đăng ký thực tập
